# QtAppVeyor

./: .appveyor.yml  .gitignore  AboutDialog.cpp  AboutDialog.ui  CMakeLists.txt  Doxyfile  HelpDialog.cpp  HelpDialog.ui  MainWindow.cpp  MainWindow.ui  MainWindow_8cpp.html  MyConstants_8h_source.html  MyLocalization_8cpp_source.html  MyLocalization_8h.html  MyLocalization_8h_source.html  MyOrgSettings.cpp  MyOrgSettings_8cpp.html  MyOrgSettings_8cpp_source.html  MyOrgSettings_8h_source.html  MySqlDbtModel.cpp  MySqlDbtModel.h  MySqlDbtModel_8cpp_source.html  QtAppVeyor.pro  QtAppVeyor.qrc  QtAppVeyorConstants.h  README.md  README_ar.md  README_de.md  README_es.md  README_fr.md  README_it.md  README_ja.md  README_no.md  README_ru.md  README_sv.md  README_zh-CN.md  SimpleCrypt.cpp  SimpleCrypt_8cpp_source.html  SimpleCrypt_8h.html  classMainWindow.js  (+44 more)
doc/html/: MainWindow_8cpp.html  MainWindow_8cpp_source.html  MainWindow_8h.html  MainWindow_8h_source.html  MyConstants_8h.html  MyConstants_8h_source.html  MyDatatables_8cpp.html  MyDatatables_8cpp_source.html  MyDatatables_8h.html  MyDatatables_8h_source.html  MyLocalization_8cpp.html  MyLocalization_8cpp_source.html  MyLocalization_8h.html  MyLocalization_8h_source.html  MyOrgSettings_8cpp.html  MyOrgSettings_8cpp_source.html  MyOrgSettings_8h.html  MyOrgSettings_8h_source.html  MySqlDbtModel_8cpp.html  MySqlDbtModel_8cpp_source.html  MySqlDbtModel_8h.html  MySqlDbtModel_8h_source.html  SimpleCrypt_8cpp.html  SimpleCrypt_8cpp_source.html  SimpleCrypt_8h.html  SimpleCrypt_8h_source.html  annotated.html  annotated_dup.js  classMainWindow-members.html  classMainWindow.html  classMainWindow.js  classMyConfigurationClass-members.html  classMyConfigurationClass.html  classMyConstants-members.html  classMyConstants.html  classMyConstants.js  classMyDatatables-members.html  classMyDatatables.html  classMyDatatables.js  classMyLocalization-members.html  (+59 more)
extras/: install-manjaro.sh  wizard-common.sh  wizard.sh
help/: About-Author-en.html  About-en.html  Help-en.html
html/: MainWindow_8cpp_source.html  MainWindow_8h_source.html  MyConstants_8h_source.html  MyDatatables_8h.html  MyDatatables_8h_source.html  MyLocalization_8cpp.html  MyLocalization_8cpp_source.html  MyLocalization_8h.html  MyLocalization_8h_source.html  MyOrgSettings_8h.html  MySqlDbtModel_8cpp.html  SimpleCrypt_8h.html  SimpleCrypt_8h_source.html  annotated.html  annotated_dup.js  classMainWindow-members.html  classMainWindow.html  classMainWindow.js  classMyConfigurationClass.html  classMyConfigurationClass.js  classMyConstants-members.html  classMyDatatables-members.html  classMyLocalization-members.html  classMyLocalization.html  classMyLocalization.js  classMyOrgSettings.js  classMyProjectClass-members.html  classMySqlDbtModel-members.html  classSimpleCrypt-members.html  classSimpleCrypt.html  classTranslationFiles.html  classes.html  files.html  functions.html  functions_b.html  functions_d.html  functions_e.html  functions_enum.html  functions_eval.html  functions_f.html  (+32 more)
html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  (+22 more)
macos/: Info.plist
scripts/: build_script.cmd  build_script.ps1  build_script.sh  build_script_mac.sh  install.cmd  install.ps1  install.sh  install_mac.sh  testPS.ps1
search/: all_0.js  all_2.js  all_3.js  all_5.js  all_8.js  all_c.js  all_d.js  classes_0.js  enums_3.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_6.js  enumvalues_7.js  enumvalues_b.js  functions_0.js  functions_3.js  functions_5.js  functions_7.js  functions_8.js  functions_b.js  functions_c.js  functions_d.js  variables_0.js  variables_1.js
src/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  HelpDialog.cpp  HelpDialog.h  HelpDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MyConstants.h  MyDatatables.cpp  MyDatatables.h  MyLocalization.cpp  MyLocalization.h  MyOrgSettings.cpp  MyOrgSettings.h  MySqlDbtModel.cpp  MySqlDbtModel.h  SimpleCrypt.h  main.cpp
translations/: QtAppVeyor_ar.qm  QtAppVeyor_ar.ts  QtAppVeyor_ar_AR.qm  QtAppVeyor_ar_AR.ts  QtAppVeyor_de.qm  QtAppVeyor_de.ts  QtAppVeyor_de_DE.qm  QtAppVeyor_de_DE.ts  QtAppVeyor_en.qm  QtAppVeyor_en.ts  QtAppVeyor_en_US.qm  QtAppVeyor_en_US.ts  QtAppVeyor_es.qm  QtAppVeyor_es.ts  QtAppVeyor_es_ES.qm  QtAppVeyor_es_ES.ts  QtAppVeyor_fr.qm  QtAppVeyor_fr.ts  QtAppVeyor_fr_FR.ts  QtAppVeyor_it.qm  QtAppVeyor_it.ts  QtAppVeyor_it_IT.qm  QtAppVeyor_it_IT.ts  QtAppVeyor_ja.qm  QtAppVeyor_ja.ts  QtAppVeyor_ja_JA.ts  QtAppVeyor_ko.ts  QtAppVeyor_no.qm  QtAppVeyor_no.ts  QtAppVeyor_no_NO.ts  QtAppVeyor_ru.qm  QtAppVeyor_ru.ts  QtAppVeyor_ru_RU.qm  QtAppVeyor_ru_RU.ts  QtAppVeyor_sv.qm  QtAppVeyor_sv.ts  QtAppVeyor_sv_SV.ts  QtAppVeyor_zh-CN.ts  QtAppVeyor_zh_CN.qm  QtAppVeyor_zh_CN.ts
translations_new/: QtAppVeyor_zh-CN.ts  QtAppVeyor_zh-CN.txt
(+66 files in other folders)
